--- a/callback.html
+++ b/callback.html
@@ -1,66 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Autenticação Oasis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      font-family: Georgia, "Times New Roman", serif;
-      background: #f4f1ec;
-      color: #5a0f0f;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Autenticando...</title>
 </head>
+
 <body>
-
-<h2>🔐 Processando autenticação…</h2>
-
 <script>
-(async () => {
   try {
-    const params = new URLSearchParams(window.location.search);
     const hash = window.location.hash;
+    if (!hash.includes("user=")) throw new Error();
 
-    // CASO 1 — voltou do Discord com ?code=
-    if (params.get("code")) {
-      const code = params.get("code");
-      window.location.href =
-        "https://sistema-oasis-auth.hinarahelo.workers.dev/callback?code=" + code;
-      return;
+    const data = decodeURIComponent(hash.split("user=")[1]);
+    const user = JSON.parse(data);
+
+    localStorage.setItem("usuario", JSON.stringify(user));
+
+    if (user.nivel === "staff") {
+      window.location.href = "staff/dashboard.html";
+    } else {
+      window.location.href = "tickets.html";
     }
 
-    // CASO 2 — voltou do Worker com #user=
-    if (hash.includes("user=")) {
-      const encoded = hash.split("user=")[1];
-      const user = JSON.parse(decodeURIComponent(encoded));
-
-      localStorage.setItem("usuario", JSON.stringify(user));
-
-      if (user.nivel === "juridico" || user.nivel === "coordenacao") {
-        window.location.href = "staff/dashboard.html";
-      } else {
-        window.location.href = "tickets.html";
-      }
-      return;
-    }
-
-    throw new Error("Fluxo inválido");
-
-  } catch (e) {
-    document.body.innerHTML = `
-      <h2>❌ Erro de autenticação</h2>
-      <p>Não foi possível validar seu login.</p>
-      <a href="index.html">Voltar ao início</a>
-    `;
+  } catch {
+    document.body.innerHTML = "<h2>Erro ao autenticar usuário</h2>";
   }
-})();
 </script>
-
 </body>
 </html>
