--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 <body class="dark">
 
 <header class="topo">
-  <img src="logo-oasis.png" alt="Oasis">
+  <img src="logo-oasis.png">
   <h1>Tribunal de Justiça de Oasis</h1>
-  <p>Central Oficial de Atendimento</p>
+  <span>Central Oficial de Atendimento</span>
 </header>
 
-<main class="login-box">
-  <h2>🔐 Acesso ao Sistema</h2>
-  <p>Escolha o tipo de acesso para autenticação via Discord</p>
+<main class="login">
+  <h2>🔐 Autenticação</h2>
 
-  <a class="btn discord"
+  <a class="btn cidadao"
      href="https://discord.com/oauth2/authorize?client_id=1450905109083979785&response_type=code&scope=identify&redirect_uri=https%3A%2F%2Fsistema-oasis-auth.hinarahelo.workers.dev%2Fcallback&state=cidadao">
      👤 Entrar como Cidadão
   </a>
@@ -28,9 +27,7 @@
      👮 Entrar como Staff
   </a>
 
-  <footer>
-    <small>Tribunal de Justiça de Oasis © 2025</small>
-  </footer>
+  <footer>Uso Institucional • © 2025</footer>
 </main>
 
 </body>
