--- a/callback.html
+++ b/callback.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<title>Autenticando...</title>
-</head>
-
+<html>
 <body>
 <script>
-  try {
-    const hash = window.location.hash;
-    if (!hash.includes("user=")) throw new Error();
+try {
+  const hash = location.hash;
+  if (!hash.includes("user=")) throw "";
 
-    const data = decodeURIComponent(hash.split("user=")[1]);
-    const user = JSON.parse(data);
+  const user = JSON.parse(
+    decodeURIComponent(hash.split("user=")[1])
+  );
 
-    localStorage.setItem("usuario", JSON.stringify(user));
+  localStorage.setItem("usuario", JSON.stringify(user));
 
-    if (user.nivel === "staff") {
-      window.location.href = "staff/dashboard.html";
-    } else {
-      window.location.href = "tickets.html";
-    }
-
-  } catch {
-    document.body.innerHTML = "<h2>Erro ao autenticar usuário</h2>";
+  if (user.nivel === "cidadao") {
+    location.href = "tickets.html";
+  } else {
+    location.href = "staff/dashboard.html";
   }
+} catch {
+  document.body.innerHTML = "<h2>Erro de autenticação</h2>";
+}
 </script>
 </body>
 </html>
