--- a/callback.html
+++ b/callback.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <body>
 <script>
 try {
-  const hash = location.hash;
-  if (!hash.includes("user=")) throw "";
+  if (!location.hash.includes("user=")) throw "payload ausente";
 
-  const user = JSON.parse(
-    decodeURIComponent(hash.split("user=")[1])
+  const payload = JSON.parse(
+    decodeURIComponent(location.hash.split("user=")[1])
   );
 
-  localStorage.setItem("usuario", JSON.stringify(user));
+  localStorage.setItem("usuario", JSON.stringify(payload));
 
-  if (user.nivel === "cidadao") {
+  if (payload.nivel === "cidadao") {
     location.href = "tickets.html";
   } else {
     location.href = "staff/dashboard.html";
   }
-} catch {
+} catch (e) {
   document.body.innerHTML = "<h2>Erro de autenticação</h2>";
 }
 </script>
