--- a/tickets.html
+++ b/tickets.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Sistema de Atendimento • Tribunal de Justiça de Oasis</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Sistema de Atendimento — Tribunal de Justiça de Oasis</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="bg-paper">
 
 <header class="header small official">
-  <img src="logo-oasis.png" class="logo small">
-  <div>
+  <img src="logo-oasis.png" class="logo small" />
+  <div class="header-text">
     <h1>Tribunal de Justiça de Oasis</h1>
-    <span>Sistema Oficial de Atendimento</span>
+    <span>Sistema Oficial de Atendimento ao Cidadão</span>
+  </div>
+
+  <!-- 🔔 NOTIFICAÇÕES -->
+  <div class="notif">
+    🔔 <span id="notif-count">0</span>
+    <ul id="notif-list"></ul>
   </div>
 </header>
 
-<nav class="nav-bar">
+<nav class="nav-bar official">
   <button onclick="mostrarAba('solicitacoes')">📂 Solicitações</button>
   <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
-  <button onclick="mostrarAba('precos')">💰 Preços</button>
+  <button onclick="mostrarAba('precos')">💰 Serviços</button>
   <button onclick="sair()">🚪 Sair</button>
 </nav>
 
-<main class="content">
+<main class="content official">
 
 <section id="solicitacoes" class="aba active">
-  <h2>🎫 Sistema de Tickets</h2>
-  <p class="info-box">
-    Selecione a categoria correspondente à sua solicitação.
-    Apenas 1 ticket ativo por categoria.
-  </p>
+  <h2>📂 Faça sua Solicitação</h2>
 
-  <div class="category-grid">
+  <div class="info-box official">
+    • Apenas 1 ticket ativo por categoria<br>
+    • Atendimento em até 24h<br>
+    • Use linguagem respeitosa
+  </div>
+
+  <div class="category-grid official">
     <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
     <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
     <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
@@ -54,32 +62,32 @@
   <div id="mensagens" class="chat-box"></div>
 
   <div class="chat-input">
-    <input id="mensagem" placeholder="Digite sua mensagem...">
+    <input id="mensagem" placeholder="Digite sua mensagem..." />
     <button onclick="enviarMensagem()">Enviar</button>
-    <button class="btn-secondary" onclick="mostrarAba('solicitacoes')">⬅ Voltar</button>
+    <button class="btn-secondary" onclick="mostrarAba('andamento')">⬅ Voltar</button>
   </div>
 </section>
 
 <section id="precos" class="aba">
-  <h2>💰 Tabela de Serviços</h2>
+  <h2>💰 Serviços Disponíveis</h2>
 
-  <div class="price-card">
-    <h3>⚖️ Serviços Jurídicos</h3>
+  <div class="price-card official">
+    <h3>🏛️ Atendimentos Jurídicos</h3>
     <ul>
-      <li>Delegacia Sul — $20.000</li>
-      <li>Delegacia PRF — $30.000</li>
+      <li>Delegacia Sul — <b>$20.000</b></li>
+      <li>Delegacia PRF — <b>$30.000</b></li>
     </ul>
   </div>
 
-  <div class="price-card">
+  <div class="price-card official">
     <h3>💍 Certidões Civis</h3>
     <ul>
-      <li>Casamento — $150.000</li>
-      <li>Divórcio — $200.000</li>
-      <li>Troca de Nome — $250.000</li>
-      <li>Adoção — $50.000</li>
-      <li>Nascimento — $50.000</li>
-      <li>Jovem Aprendiz — $30.000</li>
+      <li>Casamento — <b>$150.000</b></li>
+      <li>Divórcio — <b>$200.000</b></li>
+      <li>Troca de Nome — <b>$250.000</b></li>
+      <li>Adoção — <b>$50.000</b></li>
+      <li>Nascimento — <b>$50.000</b></li>
+      <li>Jovem Aprendiz — <b>$30.000</b></li>
     </ul>
   </div>
 </section>
