--- a/tickets.html
+++ b/tickets.html
@@ -8,89 +8,153 @@
 
 <body class="bg-paper">
 
+<!-- ================= HEADER ================= -->
 <header class="header small official">
   <img src="logo-oasis.png" class="logo small" />
   <div class="header-text">
     <h1>Tribunal de Justiça de Oasis</h1>
     <span>Sistema Oficial de Atendimento ao Cidadão</span>
   </div>
-
-  <!-- 🔔 NOTIFICAÇÕES -->
-  <div class="notif">
-    🔔 <span id="notif-count">0</span>
-    <ul id="notif-list"></ul>
-  </div>
 </header>
 
+<!-- ================= NAVBAR ================= -->
 <nav class="nav-bar official">
   <button onclick="mostrarAba('solicitacoes')">📂 Solicitações</button>
   <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
-  <button onclick="mostrarAba('precos')">💰 Serviços</button>
-  <button onclick="sair()">🚪 Sair</button>
+  <button onclick="mostrarAba('ticketsAdmin')">🎫 Administrativos</button>
+  <button onclick="mostrarAba('precos')">💰 Tabela de Serviços</button>
+  <button onclick="sair()">🚪 Encerrar Sessão</button>
 </nav>
 
+<!-- ================= CONTEÚDO ================= -->
 <main class="content official">
 
-<section id="solicitacoes" class="aba active">
-  <h2>📂 Faça sua Solicitação</h2>
+  <!-- ===== SOLICITAÇÕES ===== -->
+  <section id="solicitacoes" class="aba active">
+    <h2>🎫 Sistema de Tickets</h2>
 
-  <div class="info-box official">
-    • Apenas 1 ticket ativo por categoria<br>
-    • Atendimento em até 24h<br>
-    • Use linguagem respeitosa
-  </div>
+    <div class="info-box official">
+      <b>Bem-vindo ao sistema oficial de atendimento.</b><br><br>
+      • Apenas usuários autorizados podem abrir tickets<br>
+      • Limite de <b>1 ticket ativo por categoria</b><br>
+      • Resposta em até 24 horas<br>
+      • Mantenha a conversa objetiva e respeitosa
+    </div>
 
-  <div class="category-grid official">
-    <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
-    <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
-    <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-    <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
-    <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
-    <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
-    <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-    <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
-  </div>
-</section>
+    <div class="category-grid official">
+      <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
+      <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
+      <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
+      <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
+      <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
+      <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
+      <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
+      <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
+    </div>
+  </section>
 
-<section id="andamento" class="aba">
-  <h2>🕒 Tickets em Andamento</h2>
-  <div id="listaTickets" class="card-list"></div>
-</section>
+  <!-- ===== EM ANDAMENTO ===== -->
+  <section id="andamento" class="aba">
+    <h2>🕒 Tickets em Andamento</h2>
+    <p class="section-desc">
+      Acompanhe abaixo seus atendimentos ativos.
+      Clique para continuar o atendimento.
+    </p>
 
-<section id="chat" class="aba">
-  <h2 id="chatTitulo">💬 Atendimento</h2>
-  <div id="mensagens" class="chat-box"></div>
+    <div id="listaTickets" class="card-list official"></div>
+  </section>
 
-  <div class="chat-input">
-    <input id="mensagem" placeholder="Digite sua mensagem..." />
-    <button onclick="enviarMensagem()">Enviar</button>
-    <button class="btn-secondary" onclick="mostrarAba('andamento')">⬅ Voltar</button>
-  </div>
-</section>
+  <!-- ===== CHAT ===== -->
+  <section id="chat" class="aba">
+    <h2 id="chatTitulo">💬 Atendimento</h2>
 
-<section id="precos" class="aba">
-  <h2>💰 Serviços Disponíveis</h2>
+    <div id="mensagens" class="chat-box official"></div>
 
-  <div class="price-card official">
-    <h3>🏛️ Atendimentos Jurídicos</h3>
-    <ul>
-      <li>Delegacia Sul — <b>$20.000</b></li>
-      <li>Delegacia PRF — <b>$30.000</b></li>
-    </ul>
-  </div>
+    <div class="chat-input official">
+      <input id="mensagem" placeholder="Digite sua mensagem..." />
 
-  <div class="price-card official">
-    <h3>💍 Certidões Civis</h3>
-    <ul>
-      <li>Casamento — <b>$150.000</b></li>
-      <li>Divórcio — <b>$200.000</b></li>
-      <li>Troca de Nome — <b>$250.000</b></li>
-      <li>Adoção — <b>$50.000</b></li>
-      <li>Nascimento — <b>$50.000</b></li>
-      <li>Jovem Aprendiz — <b>$30.000</b></li>
-    </ul>
-  </div>
-</section>
+      <!-- 📎 ANEXO -->
+      <input type="file" id="arquivo" />
+
+      <button onclick="enviarMensagem()">Enviar</button>
+      <button class="btn-secondary" onclick="mostrarAba('andamento')">
+        ⬅ Voltar
+      </button>
+    </div>
+  </section>
+
+  <!-- ===== ADMINISTRATIVOS ===== -->
+  <section id="ticketsAdmin" class="aba">
+    <h2>🎫 Atendimentos Administrativos</h2>
+
+    <div class="info-box official">
+      Utilize estas opções apenas para demandas institucionais.
+    </div>
+
+    <div class="category-grid official">
+      <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
+      <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
+      <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
+      <button onclick="abrirCategoria('Processos')">📁 Processos</button>
+    </div>
+  </section>
+
+  <!-- ===== PREÇOS ===== -->
+  <section id="precos" class="aba">
+    <h2>💰 Serviços Disponíveis ao Público</h2>
+
+    <div class="price-card official">
+      <h3>🏛️ Atendimentos Jurídicos</h3>
+      <ul>
+        <li>Delegacia Sul — <b>$20.000</b></li>
+        <li>Delegacia PRF — <b>$30.000</b></li>
+      </ul>
+
+      <h4>Redução de Pena</h4>
+      <ul>
+        <li>Presença de advogado — <b>-20%</b></li>
+        <li>Confissão — <b>-10%</b></li>
+        <li>Bom comportamento — <b>-10%</b></li>
+        <li><b>Total possível: até 40%</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>💍 Certidões Civis</h3>
+      <ul>
+        <li>Casamento — <b>$150.000</b></li>
+        <li>Divórcio — <b>$200.000</b></li>
+        <li>Troca de Nome — <b>$250.000</b></li>
+        <li>Adoção — <b>$50.000</b></li>
+        <li>Nascimento — <b>$50.000</b></li>
+        <li>Jovem Aprendiz — <b>$30.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🔫 Porte de Arma</h3>
+      <ul>
+        <li>Emissão de porte legal — <b>$20.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🏢 Alvará de Funcionamento</h3>
+      <ul>
+        <li>Abertura — <b>$150.000</b></li>
+        <li>Renovação — <b>$60.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🧾 Ações Jurídicas</h3>
+      <ul>
+        <li>Ação Judicial — <b>$50.000</b></li>
+        <li>Limpeza de Ficha (1 a 3) — <b>$50.000</b></li>
+        <li>A partir da 4ª — <b>+$10.000</b></li>
+      </ul>
+    </div>
+  </section>
 
 </main>
 
