--- a/staff/dashboard.html
+++ b/staff/dashboard.html
@@ -2,50 +2,41 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Painel Staff — Tribunal de Justiça de Oasis</title>
+  <title>Coordenação • Tribunal de Justiça de Oasis</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 
 <body class="bg-paper">
 
+<script>
+  const usuario = JSON.parse(localStorage.getItem("usuario"));
+  if (!usuario || usuario.nivel !== "coordenacao") {
+    location.href = "../index.html";
+  }
+</script>
+
 <header class="header small official">
   <img src="../logo-oasis.png" class="logo small">
   <div>
     <h1>Tribunal de Justiça de Oasis</h1>
-    <span>Painel Administrativo • Staff</span>
+    <span>Painel da Coordenação Jurídica</span>
   </div>
 </header>
 
 <nav class="nav-bar official">
-  <button onclick="mostrarAba('lista')">🎫 Tickets</button>
-  <button onclick="sair()">🚪 Sair</button>
+  <button onclick="abrirAba('todos')">📊 Todos os Tickets</button>
+  <button onclick="location.href='staff.html'">👮 Staff</button>
+  <button onclick="localStorage.clear();location.href='../index.html'">🚪 Sair</button>
 </nav>
 
 <main class="content official">
 
-<!-- LISTA -->
-<section id="lista" class="aba active">
-  <h2>🎫 Tickets Abertos</h2>
-  <div id="listaTickets" class="card-list"></div>
-</section>
-
-<!-- CHAT -->
-<section id="chat" class="aba">
-  <h2 id="chatTitulo">💬 Atendimento</h2>
-
-  <div id="mensagens" class="chat-box official"></div>
-
-  <div class="chat-input official">
-    <input id="mensagem" placeholder="Resposta oficial da staff..." />
-    <button onclick="enviarMensagemStaff()">Responder</button>
-  </div>
-
-  <div style="margin-top:10px; display:flex; gap:10px;">
-    <button onclick="alterarStatus('em_atendimento')">🟡 Em atendimento</button>
-    <button onclick="alterarStatus('aguardando_cidadao')">⏳ Aguardando cidadão</button>
-    <button onclick="alterarStatus('fechado')">🔒 Fechar ticket</button>
-    <button class="btn-secondary" onclick="mostrarAba('lista')">⬅ Voltar</button>
-  </div>
+<section id="todos" class="aba active">
+  <h2>📊 Monitoramento Geral</h2>
+  <p class="section-desc">
+    Visão geral de todos os atendimentos, com SLA e responsáveis.
+  </p>
+  <div id="lista-tickets" class="card-list"></div>
 </section>
 
 </main>
