--- a/index.html
+++ b/index.html
@@ -1,42 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Tribunal de Justiça de Oasis</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Sistema Oasis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .box {
+      background: #020617;
+      padding: 30px;
+      border-radius: 8px;
+      text-align: center;
+      width: 100%;
+      max-width: 360px;
+    }
+
+    button {
+      background: #5865F2;
+      border: none;
+      color: #fff;
+      padding: 14px;
+      width: 100%;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+  </style>
 </head>
 
-<body class="bg-paper">
+<body>
 
-<header class="header official">
-  <img src="logo-oasis.png" class="logo">
-  <div>
-    <h1>Tribunal de Justiça de Oasis</h1>
-    <span>Sistema Oficial de Atendimento</span>
+  <div class="box">
+    <h2>🔐 Sistema Oasis</h2>
+    <p>Faça login para continuar</p>
+
+    <button onclick="loginDiscord()">
+      Entrar com Discord
+    </button>
   </div>
-</header>
 
-<main class="login-container">
-  <div class="login-card">
-    <h2>🔐 Autenticação Oficial</h2>
-    <p>Selecione o tipo de acesso:</p>
+  <script>
+    function loginDiscord() {
+      window.location.href =
+        "https://discord.com/oauth2/authorize" +
+        "?client_id=1450920482479145195" +
+        "&response_type=code" +
+        "&scope=identify" +
+        "&redirect_uri=https%3A%2F%2Fsistema-oasis-auth.hinarahelo.workers.dev%2Fcallback";
+    }
+  </script>
 
-    <a class="btn-primary"
-       href="https://discord.com/oauth2/authorize?client_id=1450905109083979785&response_type=code&scope=identify+guilds.members.read&redirect_uri=https%3A%2F%2Fsistema-oasis-auth.hinarahelo.workers.dev%2Fcallback&state=cidadao">
-      👤 Entrar como Cidadão
-    </a>
-
-    <a class="btn-secondary"
-       href="https://discord.com/oauth2/authorize?client_id=1450905109083979785&response_type=code&scope=identify+guilds.members.read&redirect_uri=https%3A%2F%2Fsistema-oasis-auth.hinarahelo.workers.dev%2Fcallback&state=staff">
-      👮 Entrar como Staff
-    </a>
-  </div>
-</main>
-
-<footer class="footer">
-  Tribunal de Justiça de Oasis © 2025
-</footer>
-
-<script src="index.js"></script>
 </body>
 </html>
